Application_Gateway/create_nsg.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "nsgName": {
      "type": "string",
      "defaultValue": "AppGateway-NSG",
      "metadata": {
        "description": "Имя создаваемой Network Security Group"
      }
    },
    "vnetName": {
      "type": "string",
      "defaultValue": "VNet-AppGateW",
      "metadata": {
        "description": "Имя существующей виртуальной сети"
      }
    },
    "subnetName": {
      "type": "string",
      "defaultValue": "subnet1",
      "metadata": {
        "description": "Имя подсети, к которой будет привязана NSG"
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Расположение ресурсов"
      }
    }
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2021-05-01",
      "name": "[parameters('nsgName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow-HTTP-Inbound",
            "properties": {
              "priority": 100,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "80",
              "description": "Разрешить входящий HTTP-трафик на порт 80 из любых источников"
            }
          },
          {
            "name": "Allow-AGW-Inbound",
            "properties": {
              "priority": 110,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "65200-65535",
              "description": "Разрешить входящий трафик от AzureLoadBalancer на порты 65200-65535"
            }
          },
          {
            "name": "Allow-Backend-Outbound",
            "properties": {
              "priority": 120,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Outbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "192.168.0.0/24",
              "destinationPortRange": "*",
              "description": "Разрешить исходящий трафик к backend-серверам в подсети 192.168.0.0/24"
            }
          },
          {
            "name": "Allow-Internet-Outbound",
            "properties": {
              "priority": 130,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Outbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "Internet",
              "destinationPortRange": "*",
              "description": "Разрешить исходящий трафик в интернет"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2021-05-01",
      "name": "[concat(parameters('vnetName'), '/', parameters('subnetName'))]",
      "properties": {
        "addressPrefix": "192.168.0.0/24",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
      ]
    }
  ]
}
